--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:2736230899@qq.com">email</a></li>
-	        		<li><a href="https://github.com/luke396">github.com/hankquinlan</a></li>
+	        		<li><a href="https://github.com/luke396">github.com/luke</a></li>
 				</ul>
 			</footer>
 		</body>
